<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/loginbg"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/designer_info"
            android:layout_marginStart="10sp"
            android:shadowColor="@color/colorTextBlack"
            android:shadowDx="2.0"
            android:shadowDy="2.0"
            android:shadowRadius="5.0"
            android:text="@string/login_title_1"
            android:textColor="@color/colorTextWhite"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/designer_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="12sp"
            android:shadowColor="@color/colorTextBlack"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="3.0"
            android:text="@string/designer_info"
            android:textColor="@color/colorTextWhite" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_rl_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_weight="5">

        <LinearLayout
            android:id="@+id/login_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_marginTop="10sp"
                android:src="@mipmap/user"
                android:contentDescription="@string/user_tips" />

            <EditText
                android:id="@+id/login_edit_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:hint="@string/user_tips"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_userName">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_marginTop="10sp"
                android:src="@mipmap/pwd"
                android:contentDescription="@string/pwd_tips" />

            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_tips"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/login_chk_rm_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/login_pwd"
            android:layout_below="@+id/login_pwd"
            android:layout_marginEnd="4sp"
            android:text="@string/auto_login"
            android:textColor="@color/colorTextBlack" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_shape"
            android:text="@string/login"
            android:textColor="@color/colorTextWhite" />

    </RelativeLayout>

</LinearLayout>